# onc-data-wrangler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: example_project.yaml
configs/.ipynb_checkpoints/: example_project-checkpoint.yaml
output/: cohort_ids.json
src/onc_data_wrangler/: __init__.py  cli.py  config.py
src/onc_data_wrangler/agents/: __init__.py  discovery.py  prompts.py
src/onc_data_wrangler/database/: builder.py
src/onc_data_wrangler/extraction/: __init__.py  extractor.py
src/onc_data_wrangler/llm/: multi_client.py  vllm_server.py
src/onc_data_wrangler/ontologies/: __init__.py  base.py  registry.py
src/onc_data_wrangler/ontologies/builtins/clinical_summary/: __init__.py  ontology.py
src/onc_data_wrangler/query/: mcp_server.py
src/onc_data_wrangler/training/: __init__.py  dataset.py  grpo_trainer.py  reward.py
src/onc_data_wrangler/web/: __init__.py  app.py
src/talk_to_data/: cli.py  config.py
src/talk_to_data/agents/: pipeline.py  prompts.py  setup.py
src/talk_to_data/cohort/: builder.py
src/talk_to_data/database/: __init__.py  builder.py  metadata.py
src/talk_to_data/extraction/: chunked.py  extractor.py
src/talk_to_data/llm/: __init__.py  claude_client.py  vllm_client.py
src/talk_to_data/ontologies/: __init__.py  base.py  registry.py
src/talk_to_data/ontologies/builtins/: __init__.py
src/talk_to_data/query/: privacy.py  sql_validator.py
src/talk_to_data/training/: silver_labels.py
src/talk_to_data/web/: app.py
src/talk_to_data/web/static/: index.html
tests/: test_vllm_multi.py
(+74 files in other folders)
