[project]
name = "talk-to-data"
version = "0.1.0"
description = "General-purpose framework for building agentic clinical dataset query systems."
requires-python = ">=3.13"
dependencies = [
    "anthropic[vertex]>=0.42.0",
    "claude-agent-sdk>=0.1.0",
    "duckdb>=1.0.0",
    "fastapi>=0.110.0",
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "sqlglot>=25.0.0",
    "sse-starlette>=2.0.0",
    "transformers>=4.40.0",
    "uvicorn>=0.30.0",
    "vllm",
]

[project.optional-dependencies]
training = [
    "trl>=0.12.0",
    "peft>=0.13.0",
    "datasets>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
talk-to-data = "talk_to_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talk_to_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
